--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile('com.mikepenz:materialdrawer:3.1.2@aar') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        transitive = true
+    }
+    compile 'io.realm:realm-android:0.87.5'
 }
