--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.TestActivity" />
+        <activity android:name=".Activity.NotesActivity" />
+        <activity android:name=".Activity.NewNoteActivity" />
         <activity android:name=".Activity.HelloActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
