--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".Activity.TestActivity" />
         <activity android:name=".Activity.NotesActivity" />
         <activity android:name=".Activity.NewNoteActivity" />
+        <activity android:name=".Activity.SubjectActivity" />
         <activity android:name=".Activity.HelloActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
