--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
         transitive = true
     }
     compile 'io.realm:realm-android:0.87.5'
+    compile 'com.android.support:palette-v7:23.1.1'
 }
