--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         <activity android:name=".Activity.NotesActivity" />
         <activity android:name=".Activity.NewNoteActivity" />
         <activity android:name=".Activity.SubjectActivity" />
+        <activity android:name=".Activity.AnimateToolbar"/>
         <activity android:name=".Activity.CreateSubjectActivity" />
         <activity android:name=".Activity.HelloActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
