--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.TestActivity" />
+        <activity android:name=".Activity.AllNotesActivity" />
+        <activity android:name=".Activity.HelpActivity" />
+        <activity android:name=".Activity.AboutActivity" />
         <activity android:name=".Activity.PersonalActivity" />
         <activity android:name=".Activity.AllMethodicActivity" />
         <activity android:name=".Activity.MethodicActivity" />
