--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -19,6 +19,15 @@ android {
     }
 }
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "io.realm:realm-gradle-plugin:0.90.1"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
@@ -29,7 +38,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         transitive = true
     }
-    compile 'io.realm:realm-android:0.87.5'
     compile 'com.android.support:palette-v7:23.1.1'
 
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
